@@ -1,11 +1,21 @@
 extern void ref ();
 extern void foo ();
 
-void _start() __asm__("_start");
-
 void
 _start ()
 {
   foo ();
   ref ();
+}
+
+void
+__start ()
+{
+  _start ();
+}
+
+void
+start ()
+{
+  __start ();
 }
