@@ -1,5 +1,10 @@
 2003-05-07  H.J. Lu <hongjiu.lu@intel.com>
 
+	* ld-elfvers/vers27d3.c (__start): New.
+	(start): New.
+
+2003-05-07  H.J. Lu <hongjiu.lu@intel.com>
+
 	* ld-elfvers/vers.exp (build_binary): Support build exeutable.
 	(build_binary): Renamed from ...
 	(build_vers_lib): This.
